--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,8 @@ main{
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0px 0px 16px 16px;
   box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-  font-size: 20px;
-  color: #e84118
+  font-size: 30px;
+  color: black;
 }
 
 .search-box .search-bar:focus{
